@@ -1,3 +1,5 @@
+- sort choices per media, then per version
+
 Version 1.73 - 11 August 2007, by Pascal "Pixel" Rigaux
 
 - allow running transaction with replagekgs option
